dark mode negative percentage fix color contrast

--- a/style/_overview.scss
+++ b/style/_overview.scss
@@ -55,7 +55,7 @@
             }
 
             .down {
-                color: $bright-red;
+                color: #E46C74;
             }
         }
     }
