--- a/style/_social media containers.scss
+++ b/style/_social media containers.scss
@@ -74,7 +74,7 @@
         }
 
         .down {
-            color: $bright-red;
+            color: #E46C74;
         }
     }
 }
